# stsearch

./: .gitignore  Cargo.toml  Dockerfile  README.md  algorithm.py  build.rs
src/: algorithm.rs  document.rs  lang.rs  lib.rs  main.rs  pattern.rs  stmatch.rs  tree.rs
src/code/: document.rs  lang.rs  mod.rs
src/lang/: ts_semgrep.rs
src/lang/ts_semgrep/: grammar.js
src/lang/ts_semgrep/src/: scanner.c
src/tree/: document.rs  mts.rs  ts.rs
