[package]
name = "stsearch"
version = "0.1.0"
edition = "2021"

[features]
default = ["code"]
cli = ["code", "dep:clap"]
code = [
    "dep:tree-sitter",
    "dep:tree-sitter-javascript",
]

[dependencies]
tree-sitter = { version = "0.20", optional = true }
tree-sitter-javascript = { version = "0.20", optional = true }
clap = { version = "4.1", optional = true, features = ["derive"] }

[[bin]]
name = "stsearch"
required-features = ["cli"]
